# a-level-prep

./: Cargo.toml  README.md  Rocket.toml  details.csv  stock.csv  words.txt
src/: gtin1.rs  gtin2.rs  gtin3.rs  hangman.rs  main.rs  server.rs
static/: style.css
templates/: index.html.tera
